--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 Django==3.2
 django-allauth==0.44.0
 django-ckeditor==6.0.0
+django-environ==0.4.5
 django-js-asset==1.2.2
 django-widget-tweaks==1.4.8
 gunicorn==20.1.0
