--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
 asgiref==3.3.4
-attrs==21.2.0
-autobahn==21.3.1
-Automat==20.2.0
 autopep8==1.5.6
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-constantly==15.1.0
 cryptography==3.4.7
-daphne==3.0.2
 defusedxml==0.7.1
 Django==3.2
 django-allauth==0.44.0
@@ -17,28 +12,20 @@ django-environ==0.4.5
 django-js-asset==1.2.2
 django-widget-tweaks==1.4.8
 gunicorn==20.1.0
-hyperlink==21.0.0
 idna==2.10
-incremental==21.3.0
 oauthlib==3.1.0
 Pillow==8.2.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
 pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.0.1
-pyOpenSSL==20.0.1
 python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
-service-identity==21.1.0
-six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
-Twisted==21.2.0
-txaio==21.2.1
+ua-parser==0.10.0
 urllib3==1.26.4
-zope.interface==5.4.0
