--- a/env.example
+++ b/env.example
@@ -12,5 +12,5 @@ EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_USE_TLS=True
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=numanworkstation@gmail.com
-EMAIL_HOST_PASSWORD=ehhsimpesejbggzz
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
