--- a/env.example
+++ b/env.example
@@ -9,8 +9,8 @@ DB_PASSWORD=
 DB_HOST=127.0.0.1
 DB_PORT=5432
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_USE_TLS=True
+EMAIL_USE_TLS=False
 EMAIL_PORT=587
-EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST=mail.auspiciousbd.com
+EMAIL_HOST_USER=web@auspiciousbd.com
+EMAIL_HOST_PASSWORD=?MyrDw=T;WxG
