--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ django-js-asset==1.2.2
 django-widget-tweaks==1.4.8
 gunicorn==20.1.0
 idna==2.10
+mysqlclient==2.0.3
 oauthlib==3.1.0
 Pillow==8.2.0
-psycopg2-binary==2.9.1
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.0.1
@@ -26,4 +28,5 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
 toml==0.10.2
+ua-parser==0.10.0
 urllib3==1.26.4
